@@ -22,8 +22,7 @@
  */
 
 // key: compiler.misc.feature.records
-// key: compiler.err.feature.not.supported.in.source.plural
-// key: compiler.warn.source.no.system.modules.path
-// options: -source 15
+// key: compiler.warn.preview.feature.use.plural
+// options: --enable-preview -source ${jdk.version} -Xlint:preview
 
 record R() {}
